feat: add tracing for command handling